[tool.poetry]
name = "auto-pure"
version = "0.1.0"
description = ""
authors = ["Ilya Chistyakov <i.chistyakov@anabar.ai>"]
readme = "README.md"
packages = [{include = "auto_pure"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
